fix: adds spacing on projec util to sides and between content and image

--- a/src/utils/project/project.scss
+++ b/src/utils/project/project.scss
@@ -1,7 +1,9 @@
 .project {
   display: flex;
   padding-bottom: 45px;
-  
+  padding-right: 45px;
+  padding-left: 45px;
+
   .project-media {
     .project-image {
       max-width: 500px;
@@ -12,7 +14,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      padding-left: 20px;
+      padding-left: 110px;
 
       .project-name {
         font-size: 39px;
@@ -33,6 +35,7 @@
         font-size: 22px;
         color: #656b6f;
         padding-bottom: 23px;
+        // max-width: 80%;
       }
 
       .project-list {
